# RMCitecraft

./: .envrc  .envrc.README.md  .gitignore  AGENTS.md  CLAUDE.md  CLI_IMPLEMENTATION.md  DATA_QUALITY_VALIDATION.md  EXTRACTION_FIX_COMPLETE.md  GEMINI.md  PLAN_census_transcriber_refactor.md  PRD.md  QUALITY_CONTROL_INTEGRATION.md  QUICKSTART.md  README.md  census_transcription_results.html  check_missing_urls.py  claude_code_docs_map.md  debug_dashboard.py  process_census_batch.py  pyproject.toml  pytest.ini  test_citation_workflow.py  test_db_connection.py  test_fallback_parser.py  test_minimal_dashboard.py  test_ui_citation_manager.py  test_validation.py
.claude/: session-context.md
.claude/skills/: BEST_PRACTICES.md
.github/: README-github.md  README.md
.github/scripts/: add_frontmatter.py  check_frontmatter.py  generate_docs_map.py  refactor_docs.py
.github/workflows/: check-frontmatter.yml  generate-docs-map.yml  refactor-docs.yml
config/: .env.example
data/: Iiams.rmtree-shm  Iiams.rmtree-wal
docs/: 1930_CENSUS_ED_EXTRACTION_ISSUE.md  1930_CENSUS_INVESTIGATION_SUMMARY.md  1930_CENSUS_QUICK_SUMMARY.md  BATCH_PROCESSING_ARCHITECTURE.md  BATCH_PROCESSING_ASYNC_FIX.md  BATCH_PROCESSING_BUGFIXES.md  BATCH_PROCESSING_FINAL_FIXES.md  BATCH_PROCESSING_PHASE1_IMPLEMENTATION.md  BATCH_PROCESSING_UI_DESIGN.md  CITATION-MATCHING-REPORT.md  CODE-MAINTAINABILITY-ASSESSMENT.md  COUNTYCHECKDB.md  DASHBOARD_COMPONENTS_REFERENCE.md  DASHBOARD_DESIGN.md  DASHBOARD_IMPLEMENTATION_PLAN.md  E2E-TESTING-QUICKSTART.md  ERROR-HANDLING-UI.md  FINDAGRAVE-IMPLEMENTATION.md  FULL_INDEX.md  GAZETTEER.md  IMAGE-DOWNLOAD-WORKFLOW.md  MESSAGE_LOG_IMPLEMENTATION.md  PLACEDB-FORMAT-ANALYSIS.md  PLAYWRIGHT-MIGRATION.md  README.md  TEST-GAP-ANALYSIS.md  TEST-IMAGE-DOWNLOAD.md  UI-LOGGING.md  USER_JOURNEY_MAP.md  annotated-schema.sql  dashboard-debugging-lessons.md  data-definitions.yaml
docs/analysis/: CENSUS-1790-1850-ANALYSIS.md  CENSUS-COMPLETE-ANALYSIS-1790-1950.md  CENSUS-DATA-ANALYSIS.md  CENSUS-PRE-1900-ANALYSIS.md
docs/architecture/: ARCHITECTURE-ASSESSMENT.md  ARCHITECTURE_DIAGRAM.md  BATCH_PROCESSING_ARCHITECTURE.md  BATCH_PROCESSING_UI_DESIGN.md  CENSUS_BATCH_PROCESSING_ARCHITECTURE.md  CITATION-ERRORS-1930.md  CITATION-STORAGE.md  DASHBOARD_DESIGN.md  DESIGN-DECISIONS.md  FORMATTER-CORRECTIONS-1930.md  IMAGE-MANAGEMENT-ARCHITECTURE.md  IMAGE-VIEWER-INTEGRATION.md  IMAGE-VIEWER.md  IMPLEMENTATION-STATUS.md  LLM-ARCHITECTURE.md  LLM-PROVIDERS.md
docs/archive/: QUICKSTART-UI.md  WEEK1-SUMMARY.md  WEEK2-SUMMARY.md  WEEK3-SUMMARY.md  WEEK4-PROGRESS.md
docs/database/: how-to-use-extension.md
docs/extension/: DEBUGGING.md
docs/implementation/: 1950-FORMAT-FIX.md  BATCH_PROCESSING_ASYNC_FIX.md  BATCH_PROCESSING_BUGFIXES.md  BATCH_PROCESSING_FINAL_FIXES.md  UI-UPDATES.md  (+11 more)
extension/: background.js  content-keyboard-approach.js  content.js  manifest.json  popup.css  popup.html  popup.js
logs/: census_batch_1940_20251106_122544.md  census_batch_1940_20251106_124750.md  census_batch_1940_20251106_124905.md  census_batch_1940_20251106_130609.md  census_batch_1940_20251106_130812.md  census_batch_1950_20251106_113308.md  pending_citations.json
migrations/: 001_create_batch_state_tables.sql  002_create_census_batch_tables.sql  003_schema_improvements.sql  004_create_census_transcription_tables.sql  005_add_citation_id_to_census_batch.sql
scripts/: __init__.py  capture_ui_screenshots.py  census_quality_check.py  check_person_7464.py  check_person_856.py  count_missing_urls.py  extract_missing_fields.py  fix_1880_missing_ed_numbers.py  fix_1880_sheet_to_page.py  fix_1880_shortfn_and_bib.py  fix_sample_line_offset.py  gazetteer_query.py  migrate_validated_matches.py  process_census_batch.py  run_e2e_tests.sh  test_gazetteer.py  verify_url_fix.py  verify_url_fix_simple.py
sqlite-extension/: icu.dylib  python_example.py
tests/: test_findagrave_e2e.py  test_findagrave_image_workflow.py  test_george_iams_citation.py  test_llm_providers.py
website/: Eldon Iams, _United States, Census, 1950_.html  Glen H James, _United States, Census, 1940_.html
(+326 files in other folders)
