[project]
name = "rmcitecraft"
version = "0.1.0"
description = "Automates citation formatting and image management for US Federal census records in RootsMagic genealogy databases"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "RMCitecraft Team" }
]
keywords = ["genealogy", "rootmagic", "citations", "census", "familysearch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Sociology :: Genealogy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
]

dependencies = [
    # UI Framework
    "nicegui>=3.0.0",
    # LLM Integration
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    # Data Validation and Settings
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # File System Monitoring
    "watchdog>=3.0.0",
    # Logging
    "loguru>=0.7.0",
    # macOS Integration
    "pywebview>=4.0.0",
    "pyobjc-core>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "playwright>=1.55.0",
]

[project.scripts]
rmcitecraft = "rmcitecraft.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
packaging = [
    "pyinstaller>=6.0.0",
    "py2app>=0.28.0",
]
cost-optimization = [
    "litellm>=1.0.0",
]
# New LLM provider options
llm = [
    "llm>=0.13.0",
]
openrouter = [
    "openai>=1.0.0",
]
all-llm = [
    "llm>=0.13.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rmcitecraft"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest-playwright>=0.7.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "watchdog.*",
    "nicegui.*",
    "pywebview.*",
    "langchain.*",
    "langchain_anthropic.*",
    "langchain_openai.*",
    "langchain_community.*",
    "langchain_ollama.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=rmcitecraft",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests that may take longer to run",
    "llm: Tests that require LLM API access",
]

[tool.coverage.run]
source = ["rmcitecraft"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
